# Test_AI_LLM_Apps

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
componentTestingUseTracing/: agent.py  component_test.ipynb
modules/: POST_LLMCPP_Call.py  langchain_agent.py  local_model_llama.py  local_model_llama_with_logger.py
notebooks/: 1_FirstTest.ipynb  1_First_llm_logger.ipynb  2_test_using_ContextualPrecisionMatrix.ipynb  3_golden_evaluation_dataset.ipynb  4_createEvaluationDatasetInGolden.ipynb  judge_traces.json
notebooks/RAG/notebook/: 1-document.ipynb
notebooks/RAG/src/: DocsChunking.py  EmbeddingManager.py  LoadData.py  RagRetriever.py  VectorStoreManager.py  __init__.py
notebooks/RAG/tests/: context_precision_metirs_evaluation.py  rag_test.ipynb  test_rag_context.py
notebooks/agenticToolCallsValidations/: testAIAgent.ipynb
testingLLM/: 1_SentimentAnalysis.ipynb  2_testing_llmUsingHFEvaluate.ipynb
