[project]
name = "test-ai-llm-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.6",
    "deepeval>=3.9.5",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-openai>=1.1.12",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "tensorflow>=2.21.0",
    "tf-keras>=2.21.0",
    "transformers>=5.5.0",
]
